--- a/trunk/android/LichVanNien/res/layout/app_content_dialog.xml
+++ b/trunk/android/LichVanNien/res/layout/app_content_dialog.xml
@@ -9,20 +9,20 @@
   		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"	
 		android:textColor="#f1de9a"
-	    android:height="150px"	
+	    android:height="150dip"	
 	    android:textStyle="bold"
-	    android:paddingTop="35px"		
+	    android:paddingTop="35dip"		
 		android:text="Tiêu đề"
 		android:gravity="left"		
-		android:paddingLeft="15px"
+		android:paddingLeft="15dip"
 		android:textSize="8pt"
 		/>	
 		 <TableLayout
-		android:layout_width="270px"
-		android:layout_height="80px"
-		android:layout_marginLeft="13px"		
+		android:layout_width="270dip"
+		android:layout_height="80dip"
+		android:layout_marginLeft="13dip"		
 		android:gravity="bottom"		
-		android:layout_marginTop="10px"
+		android:layout_marginTop="10dip"
 		android:orientation="horizontal">
 		<TableRow>
 		<EditText
@@ -30,9 +30,9 @@
 			android:gravity="center"			
 			android:background="#fff"
 			android:textSize="12pt"	
-			android:paddingLeft="5px"
-			android:width="290px"
-			android:height="30px"			
+			android:paddingLeft="5dip"
+			android:width="290dip"
+			android:height="30dip"			
 			android:textColor="#000"			
 			android:selectAllOnFocus="true"
 			
@@ -40,12 +40,12 @@
 		</TableRow>
 	</TableLayout>   
 	 <TableLayout
-		android:layout_width="270px"
-		android:layout_height="150px"
-		android:layout_marginLeft="13px"		
+		android:layout_width="270dip"
+		android:layout_height="150dip"
+		android:layout_marginLeft="13dip"		
 		android:gravity="bottom"
 		
-		android:layout_marginTop="90px"
+		android:layout_marginTop="90dip"
 		android:orientation="horizontal">
 		<TextView
 		android:text="Nội dung"
@@ -60,8 +60,8 @@
 			android:gravity="center"			
 			android:background="#fff"
 			android:textSize="12pt"	
-			android:paddingLeft="5px"
-			android:width="290px"
+			android:paddingLeft="5dip"
+			android:width="290dip"
 			android:layout_height="wrap_content"
 			android:lines="3"
 			android:textColor="#000"			
@@ -73,25 +73,25 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:gravity="bottom"
-		android:layout_marginTop="260px"
+		android:layout_marginTop="260dip"
 		android:orientation="horizontal">
 		<TableRow
 		
-			android:paddingLeft="15px">
+			android:paddingLeft="15dip">
 		<Button
 			android:id="@+id/set_content"
 			android:text="Chọn"
 			android:textColor="#c17601"
 			android:background="@drawable/button_dialog1"
-			android:width="10px" 
-			android:paddingRight="5px"
+			android:width="10dip" 
+			android:paddingRight="5dip"
 			/>		
 		<Button
 			android:id="@+id/cancel_content"
 			android:textColor="#c17601"
 			android:text="Hủy"
 			android:background="@drawable/button_dialog1"
-			android:width="10px"/>	
+			android:width="10dip"/>	
 		</TableRow>			
 	</TableLayout>	
 </RelativeLayout>
