--- a/trunk/android/LichVanNien/res/layout/app_reminder_dialog.xml
+++ b/trunk/android/LichVanNien/res/layout/app_reminder_dialog.xml
@@ -10,37 +10,37 @@
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:orientation="vertical"
-  	android:layout_marginLeft="40px"
-  	android:layout_marginTop="50px">
+  	android:layout_marginLeft="40dip"
+  	android:layout_marginTop="50dip">
   	<TextView
   		android:text="Nhắc trước sự kiện"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"  	
-  		android:textSize="20px"	
+  		android:textSize="20dip"	
   		android:textColor="#f1de9a"
   		/>
   	<Spinner
   		android:id="@+id/spiner_nhac"
-  		android:layout_width="200px"
+  		android:layout_width="200dip"
   		android:layout_height="wrap_content"  			
   		android:prompt="@string/thoigiannhac"/>  
   </LinearLayout>
    <LinearLayout
-  	android:layout_width="280px"
+  	android:layout_width="280dip"
   	android:layout_height="wrap_content"
   	android:orientation="vertical"
-  	android:layout_marginLeft="40px"
-  	android:layout_marginTop="10px">
+  	android:layout_marginLeft="40dip"
+  	android:layout_marginTop="10dip">
   	<TextView
   		android:text="Lặp lại sự kiện"
-  		android:textSize="20px"
+  		android:textSize="20dip"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"  
   		android:textColor="#f1de9a"		
   		/>
   	<Spinner
   		android:id="@+id/spiner_lap"
-  		android:layout_width="200px"
+  		android:layout_width="200dip"
   		android:layout_height="wrap_content"
   		android:prompt="@string/cachlap"/>
   </LinearLayout>  
@@ -48,15 +48,15 @@
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal"
-  	android:layout_marginTop="40px"
-  	android:layout_marginLeft="10px">
+  	android:layout_marginTop="40dip"
+  	android:layout_marginLeft="10dip">
   		<Button
 			android:id="@+id/set_reminder"
 			android:text="Chọn"
 			android:textColor="#c17601"
 			android:background="@drawable/button_dialog1"
-			android:width="10px" 
-			android:paddingRight="5px"
+			android:width="10dip" 
+			android:paddingRight="5dip"
 			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
 			/>		
