--- a/trunk/android/LichVanNien/res/layout/app_time_dialog.xml
+++ b/trunk/android/LichVanNien/res/layout/app_time_dialog.xml
@@ -10,13 +10,13 @@
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal"
-  	android:layout_marginTop="50px"
-  	android:layout_marginLeft="10px">
+  	android:layout_marginTop="50dip"
+  	android:layout_marginLeft="10dip">
   	<TextView
   		android:text="Kiểu"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
-  		android:textSize="20px"  		
+  		android:textSize="20dip"  		
   		/>
   	<Spinner
   		android:id="@+id/spiner_kieuthoigian"
@@ -35,18 +35,18 @@
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal"
-  	android:layout_marginLeft="10px"
-  	android:layout_marginTop="5px">
+  	android:layout_marginLeft="10dip"
+  	android:layout_marginTop="5dip">
   	<TextView
   		android:text="Từ"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"  
-  		android:paddingRight="15px"
-  		android:textSize="20px"	
+  		android:paddingRight="15dip"
+  		android:textSize="20dip"	
   		/>
   	<Spinner
   		android:id="@+id/spiner_start_hour"
-  		android:layout_marginLeft="3px"
+  		android:layout_marginLeft="3dip"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"  		
   		android:prompt="@string/gio"/>  
@@ -57,14 +57,14 @@
 		android:prompt="@string/phut"/>
   </LinearLayout>
    <LinearLayout
-  	android:layout_width="280px"
+  	android:layout_width="280dip"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal"
-  	android:layout_marginLeft="10px"
-  	android:layout_marginTop="5px">
+  	android:layout_marginLeft="10dip"
+  	android:layout_marginTop="5dip">
   	<TextView
   		android:text="Đến "
-  		android:textSize="20px"
+  		android:textSize="20dip"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"  		
   		/>
@@ -83,15 +83,15 @@
   	android:layout_width="wrap_content"
   	android:layout_height="wrap_content"
   	android:orientation="horizontal"
-  	android:layout_marginTop="20px"
-  	android:layout_marginLeft="10px">
+  	android:layout_marginTop="20dip"
+  	android:layout_marginLeft="10dip">
   		<Button
 			android:id="@+id/set_time"
 			android:text="Chọn"
 			android:textColor="#c17601"
 			android:background="@drawable/button_dialog1"
-			android:width="10px" 
-			android:paddingRight="5px"
+			android:width="10dip" 
+			android:paddingRight="5dip"
 			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
 			/>		
