--- a/trunk/android/LichVanNien/res/layout/list_item.xml
+++ b/trunk/android/LichVanNien/res/layout/list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="65px"
+    android:layout_height="65dip"
     android:textSize="12pt"
     android:gravity="center_vertical"
-    android:paddingLeft="5px"
+    android:paddingLeft="5dip"
     android:text="test"
     android:background="@drawable/list_item"
 	/>
